# Hakamiq.CsoKit

./: .gitattributes  .gitignore  CHANGELOG_FIX_NOTES.md  CHANGES.md  CONTRIBUTING.md  Hakamiq.CsoKit.slnx  LICENSE.txt  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
docs/: CLI.md  NATIVE_BUILD.md  R1_ARCHITECTURE_REPAIR.md  R3C_RELEASE_HARDENING.md  R3D_BENCHMARK_TRUTH.md  README.md  RELEASE_0_5_0_SCORECARD.md  RELEASE_0_6_0_GATE.md  RELEASE_SCORECARD.md
docs/archive/: R3E_REAL_CORPUS_EVIDENCE.md
docs/release/: RELEASE_0_6_0_GATE.md
native/Hakamiq.Cso.Native/: CMakeLists.txt
native/Hakamiq.Cso.Native/include/: hakamiq_cso_native.h
native/Hakamiq.Cso.Native/src/: hakamiq_cso_native.cpp
scripts/: Build-Native.ps1  Publish-Release.ps1  Publish-SourcePackage.ps1  Remove-Utf8Bom.ps1  Run-BenchmarkTruthLayer.ps1  Run-CompressionBenchmark.ps1  Run-ContainerInteropGate.ps1  Run-FinalReleaseGate.ps1  Run-OfficialReleaseGate.ps1  Run-ProfileRoundtripMatrix.ps1  Run-PublishedExeSmoke.ps1  Run-RealLocalCorpusGate.ps1  Run-ReleaseGate.ps1  Run-RoundtripGate.ps1  Test-RepoTextEncoding.ps1  Verify-Release.ps1
src/Hakamiq.Cso.App/: App.xaml  App.xaml.cs  Hakamiq.Cso.App.csproj  MainWindow.xaml  MainWindow.xaml.cs
src/Hakamiq.Cso.App/Localization/: ArabicUiText.cs
src/Hakamiq.Cso.App/Models/: UiLogEntry.cs  UiOperationKind.cs  UiTaskItem.cs
src/Hakamiq.Cso.App/Services/: CsoUiOperationResult.cs  CsoUiOperationService.cs
src/Hakamiq.Cso.App/ViewModels/: MainWindowViewModel.cs  OperationSummaryViewModel.cs
src/Hakamiq.Cso.Cli/: CliExitCodes.cs  Hakamiq.Cso.Cli.csproj  Program.cs
src/Hakamiq.Cso.Cli/Commands/: AnalyzeCommand.cs  CodecsCommand.cs  CompressCommand.cs  CsoCommandDispatcher.cs  CsoCommandError.cs  CsoCompressJsonContract.cs  CsoProfileOutput.cs  DecompressCommand.cs  DetectCommand.cs  InfoCommand.cs  JsonConsole.cs  NativeInfoCommand.cs  RepairCommand.cs  VerifyCommand.cs
src/Hakamiq.Cso.Core/: Class1.cs  Hakamiq.Cso.Core.csproj
src/Hakamiq.Cso.Core/Analysis/: PspIsoAnalysisResult.cs
src/Hakamiq.Cso.Core/Compression/Trials/: CodecTrialCandidateResult.cs  CodecTrialDecisionMetrics.cs  CodecTrialReport.cs  CodecTrialSummary.cs  CodecTrialSummaryBuilder.cs
src/Hakamiq.Cso.Core/Formats/Containers/: BlockContainerReadException.cs  ContainerDeepVerifier.cs  Cso1ContainerReader.cs  Cso2ContainerReader.cs  CsoLikeContainerReader.cs  CsoLikeHeaderReader.cs  DaxContainerReader.cs  IBlockContainerReader.cs  IsoContainerReader.cs  Lz4BlockDecoder.cs  ZsoContainerReader.cs
src/Hakamiq.Cso.Core/Formats/Cso/: CompressionMethod.cs  Cso1Writer.cs  CsoBestCandidateSelector.cs  CsoBlockReader.cs  CsoCompressOptions.cs  CsoCompressProgress.cs  CsoCompressResult.cs  CsoCompressionProfile.cs  CsoCompressionProfilePolicy.cs  CsoCompressionProfileSettings.cs  CsoCompressionWorker.cs  CsoCompressor.cs  CsoConstants.cs  CsoDecompressOptions.cs  CsoDecompressProgress.cs  CsoDecompressResult.cs  CsoDecompressor.cs  CsoDeepVerifier.cs  CsoDeepVerifyIssue.cs  CsoDeepVerifyResult.cs  CsoDiskSpacePreflight.cs  CsoDiskSpacePreflightResult.cs  CsoHeader.cs  CsoHeaderReadResult.cs  CsoHeaderReader.cs  CsoIndexBuilder.cs  CsoIndexEntry.cs  CsoIndexReadResult.cs  CsoIndexReader.cs  CsoIndexShiftPolicy.cs  CsoMeasureEstimator.cs  CsoMeasureOptions.cs  CsoMeasureResult.cs  CsoOrderedOutputWriter.cs  CsoOutputPathPolicy.cs  CsoOutputSafetyPolicy.cs  CsoOutputSafetyResult.cs  CsoRepairMode.cs  CsoRepairOptions.cs  CsoRepairResult.cs  (+7 more)
src/Hakamiq.Cso.Core/Formats/Cso/Codecs/: CsoCodecKind.cs  CsoCodecTrial.cs  CsoCodecTrialResult.cs  CsoTrialEngine.cs  CsoTrialPlan.cs  (+2 more)
src/Hakamiq.Cso.Core/Formats/DiscImage/: DetectedDiscFormat.cs  FormatDetectionResult.cs  FormatDetector.cs
src/Hakamiq.Cso.Core/Formats/Iso/: Iso9660Entry.cs  Iso9660Reader.cs  IsoAlignmentPolicy.cs  IsoAlignmentResult.cs  PspIsoValidationIssue.cs  PspIsoValidationResult.cs  PspIsoValidator.cs
src/Hakamiq.Cso.Core/Formats/Psp/: PspDiscIdentity.cs  PspParamSfoReader.cs
src/Hakamiq.Cso.Core/Native/: NativeCsoBackend.cs  NativeCsoCapabilities.cs  NativeCsoRawCodec.cs  NativeCsoRuntime.cs  NativeCsoRuntimeInfo.cs
src/Hakamiq.Cso.Core/Repair/: RepairMode.cs  RepairPlan.cs  StreamingRepairService.cs
tests/Hakamiq.Cso.Tests/: Hakamiq.Cso.Tests.csproj  UnitTest1.cs
tests/Hakamiq.Cso.Tests/Fixtures/: ContainerFixtures.cs
tests/Hakamiq.Cso.Tests/Formats/: CorruptContainerRefusalTests.cs  GoldenContainerTests.cs  PspIsoFixtureTests.cs  RepairGoldenFixtureTests.cs
tests/Hakamiq.Cso.Tests/Formats/Cso/: ContainerDeepVerifierTests.cs  CsoCliContractTests.cs  CsoCompressJsonContractTests.cs  CsoCompressionDecisionTests.cs  CsoCompressionProfilePolicyTests.cs  CsoCompressorTests.cs  CsoDecompressorCancellationTests.cs  CsoDecompressorTests.cs  CsoDeepVerifierTests.cs  CsoDiskSpacePreflightTests.cs  CsoHeaderReaderTests.cs  CsoIndexReaderTests.cs  CsoIndexShiftPolicyTests.cs  CsoMeasureEstimatorTests.cs  CsoOutputPathPolicyTests.cs  CsoOutputSafetyPolicyTests.cs  CsoRepairerTests.cs  CsoSectorEngineFoundationTests.cs  CsoTestFileFactory.cs  CsoTrialEngineTests.cs  CsoTrialPlannerTests.cs  CsoVerifierTests.cs
tests/Hakamiq.Cso.Tests/Formats/DiscImage/: FormatDetectorTests.cs
tests/Hakamiq.Cso.Tests/Formats/Iso/: IsoAlignmentPolicyTests.cs  PspIsoValidatorTests.cs
tests/Hakamiq.Cso.Tests/Native/: NativeCsoRuntimeTests.cs
(+5 files in other folders)
